--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -40,6 +40,20 @@ $social-block--link-transition-duration: 0.3s;
   }
 }
 
+@keyframes social-block__toggler--before-pulse {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1.125);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
 .social-block__toggler {
   @include btn-reset;
   position: relative;
@@ -74,6 +88,12 @@ $social-block--link-transition-duration: 0.3s;
     border-radius: 50%;
     background-color: $c-light;
     z-index: -1;
+
+    .document__body_ready & {
+      $social-block--toggler-transition-duration: 0.4s;
+
+      animation: social-block__toggler--before-pulse $social-block--toggler-transition-duration $page-header__logo--page-header__nav--screen__footer--timing-function $page-header__nav--transition-delay;
+    }
   }
 
   svg {
