--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,10 +1,9 @@
 @import "general/variables.scss";
-@import "vendor/normalize.scss";
-@import "vendor/swiper.scss";
+@import "~normalize.css/normalize.css";
+@import "~swiper/css/swiper.css";
 @import "general/mixins.scss";
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
-@import "general/timing-functions.scss";
 
 @import "blocks/animation-screen.scss";
 @import "blocks/btn.scss";
