--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -27,6 +27,9 @@
 }
 
 .page-header__logo {
+  $page-header__logo--transition-duration: 0.4s;
+  $page-header__logo--transition-delay: 0.2s;
+
   @include hover;
   position: relative;
   flex: none;
@@ -35,6 +38,17 @@
   padding: 1rem 0;
   width: 10rem;
   color: $c-light;
+  transform: translateX(-50px);
+  opacity: 0;
+
+  .document__body_ready & {
+    transform: translateX(0);
+    opacity: 1;
+    transition-property: opacity, transform;
+    transition-duration: $page-header__logo--transition-duration;
+    transition-timing-function: $page-header__logo--page-header__nav--screen__footer--timing-function;
+    transition-delay: $page-header__logo--transition-delay;
+  }
 
   @media (min-width: $stop-scaling) {
     top: -5px;
@@ -127,9 +141,18 @@
   }
 }
 
+$page-header__nav--transition-duration: 0.4s;
+$page-header__nav--transition-delay: 0.4s;
+
 .page-header__nav {
   display: flex;
   align-items: center;
+  opacity: 0;
+
+  .document__body_ready & {
+    opacity: 1;
+    transition: opacity $page-header__nav--transition-duration $page-header__logo--page-header__nav--screen__footer--timing-function $page-header__nav--transition-delay;
+  }
 
   @media (max-width: $tablet) and (orientation: portrait) {
     position: fixed;
@@ -237,10 +260,14 @@
   }
 
   a {
+    $page-header__menu--item-transition-duration: 0.3s;
+
     position: relative;
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    overflow: hidden;
+    transition: color $page-header__menu--item-transition-duration ease-out;
 
     &::after {
       content: "";
@@ -249,8 +276,14 @@
       width: 100%;
       height: 2px;
       background-color: $c-light;
-      display: none;
       left: 0;
+      transform: translateX(calc(-100% - 10px));
+      transition: background-color $page-header__menu--item-transition-duration ease-out, transform $page-header__menu--item-transition-duration ease-out;
+
+      @media (min-width: $stop-scaling) {
+        left: -5px;
+        right: -5px;
+      }
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -266,8 +299,12 @@
     }
 
     &.active {
-      &::after {
-        display: block;
+      .document__body_ready & {
+        &::after {
+          transform: translateX(0);
+          transition-duration: $page-header__nav--transition-duration;
+          transition-delay: $page-header__nav--transition-delay;
+        }
       }
     }
 
@@ -279,6 +316,7 @@
       &::after {
         opacity: 1;
         background-color: $c-purple;
+        transform: translateX(0);
       }
     }
   }
