--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -5,7 +5,6 @@
 
   .swiper-wrapper {
     min-height: 100vh;
-    box-sizing: border-box;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(var(--vh, 1vh) * 100);
@@ -87,6 +86,18 @@
   @media (max-width: $mobile) and (orientation: landscape) {
     margin-left: -2.5rem;
     font-size: 3rem;
+  }
+}
+
+@keyframes slider__item-text--text-fade-in {
+  0% {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
