--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -27,9 +27,6 @@
 }
 
 .page-header__logo {
-  $page-header__logo--transition-duration: 0.4s;
-  $page-header__logo--transition-delay: 0.2s;
-
   @include hover;
   position: relative;
   flex: none;
@@ -44,10 +41,7 @@
   .document__body_ready & {
     transform: translateX(0);
     opacity: 1;
-    transition-property: opacity, transform;
-    transition-duration: $page-header__logo--transition-duration;
-    transition-timing-function: $page-header__logo--page-header__nav--screen__footer--timing-function;
-    transition-delay: $page-header__logo--transition-delay;
+    transition: opacity, transform 0.4s cubic-bezier(0.48, 0.83, 0.16, 0.92) 0.2s;
   }
 
   @media (min-width: $stop-scaling) {
@@ -141,9 +135,6 @@
   }
 }
 
-$page-header__nav--transition-duration: 0.4s;
-$page-header__nav--transition-delay: 0.4s;
-
 .page-header__nav {
   display: flex;
   align-items: center;
@@ -151,7 +142,7 @@ $page-header__nav--transition-delay: 0.4s;
 
   .document__body_ready & {
     opacity: 1;
-    transition: opacity $page-header__nav--transition-duration $page-header__logo--page-header__nav--screen__footer--timing-function $page-header__nav--transition-delay;
+    transition: opacity 0.4s cubic-bezier(0.48, 0.83, 0.16, 0.92) 0.4s;
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
@@ -260,14 +251,12 @@ $page-header__nav--transition-delay: 0.4s;
   }
 
   a {
-    $page-header__menu--item-transition-duration: 0.3s;
-
     position: relative;
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
     overflow: hidden;
-    transition: color $page-header__menu--item-transition-duration ease-out;
+    transition: color 0.3s ease-out;
 
     &::after {
       content: "";
@@ -278,7 +267,7 @@ $page-header__nav--transition-delay: 0.4s;
       background-color: $c-light;
       left: 0;
       transform: translateX(calc(-100% - 10px));
-      transition: background-color $page-header__menu--item-transition-duration ease-out, transform $page-header__menu--item-transition-duration ease-out;
+      transition: background-color 0.3s ease-out, transform 0.3s ease-out;
 
       @media (min-width: $stop-scaling) {
         left: -5px;
@@ -302,8 +291,8 @@ $page-header__nav--transition-delay: 0.4s;
       .document__body_ready & {
         &::after {
           transform: translateX(0);
-          transition-duration: $page-header__nav--transition-duration;
-          transition-delay: $page-header__nav--transition-delay;
+          transition-duration: 0.4s;
+          transition-delay: 0.4s;
         }
       }
     }
