--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -107,6 +107,15 @@
   max-width: 34rem;
   font-size: 1.8rem;
   line-height: 2rem;
+  will-change: transform;
+
+  .slider__item.slider__item_current & {
+    animation: slider__item-text--text-fade-in 0.6s ease-out;
+  }
+
+  .slider__item.slider__item_next & {
+    animation: slider__item-text--text-fade-in 0.6s ease-out 0.2s;
+  }
 
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
