--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -1,12 +1,4 @@
-$social-block--toggler-transition-duration: 0.3s;
-$social-block--toggler-transition-delay: 0.1s;
-
 $social-block--elements-count: 3;
-$social-block--element-transform-transition-duration: 0.35s;
-$social-block--element-opacity-transition-duration: 0.3s;
-$social-block--element-transition-delay: 0.1s;
-
-$social-block--link-transition-duration: 0.3s;
 
 @mixin show-social-elements {
   pointer-events: auto;
@@ -16,8 +8,8 @@ $social-block--link-transition-duration: 0.3s;
       opacity: 1;
       transform: translateY(0);
       transition:
-        opacity $social-block--element-opacity-transition-duration ease-out #{$social-block--element-transition-delay * $i},
-        transform $social-block--element-transform-transition-duration ease-out #{$social-block--element-transition-delay * $i};
+        opacity 0.3s ease-out #{0.1s * $i},
+        transform 0.35s ease-out #{0.1s * $i};
     }
   }
 }
@@ -62,7 +54,7 @@ $social-block--link-transition-duration: 0.3s;
   height: 4rem;
   color: $c-dark;
   border-radius: 50%;
-  transition: color $social-block--toggler-transition-duration ease-out $social-block--toggler-transition-delay;
+  transition: color 0.3s ease-out 0.1s;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     display: none;
@@ -83,16 +75,14 @@ $social-block--link-transition-duration: 0.3s;
     transform: scale(1);
     transform-origin: center;
     transition:
-      transform $social-block--toggler-transition-duration ease-out $social-block--toggler-transition-delay,
-      background-color $social-block--toggler-transition-duration ease-out $social-block--toggler-transition-delay;
+      transform 0.3s ease-out 0.1s,
+      background-color 0.3s ease-out 0.1s;
     border-radius: 50%;
     background-color: $c-light;
     z-index: -1;
 
     .document__body_ready & {
-      $social-block--toggler-transition-duration: 0.4s;
-
-      animation: social-block__toggler--before-pulse $social-block--toggler-transition-duration $page-header__logo--page-header__nav--screen__footer--timing-function $page-header__nav--transition-delay;
+      animation: social-block__toggler--before-pulse 0.4s cubic-bezier(0.48, 0.83, 0.16, 0.92) 0.4s;
     }
   }
 
@@ -219,7 +209,7 @@ $social-block--link-transition-duration: 0.3s;
   color: $c-light;
   border: 2px solid transparent;
   border-radius: 50%;
-  transition: color $social-block--link-transition-duration ease-out;
+  transition: color 0.3s ease-out;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
