Правка стилей slider__item

--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -17,6 +17,7 @@
   flex-direction: column;
   padding: 14.6rem 4rem 10rem 9.7rem;
   height: auto;
+  box-sizing: border-box;
 
   @media (min-width: $stop-scaling) {
     padding: 146px 40px 100px 97px;
