--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -53,12 +53,27 @@
   }
 }
 
+$rules__lead--animation-duration: 0.45s;
+
+@keyframes rules__lead--text-fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .rules__lead {
   margin-left: 5.8rem;
   max-width: 96rem;
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  animation: rules__lead--text-fade-in $rules__lead--animation-duration ease-out;
 
   @media (min-width: $stop-scaling) {
     margin-left: 58px;
@@ -114,6 +129,55 @@
 
   @media (max-width: $mobile) and (orientation: landscape) {
     column-gap: 4rem;
+  }
+}
+
+
+@keyframes rules__item--before-pulse {
+  0% {
+    transform: scale(0);
+    color: transparent;
+    opacity: 1;
+  }
+
+  50% {
+    transform: scale(1.125);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    color: $c-light;
+  }
+}
+
+@keyframes rules__item--text-fade-in {
+  0%,
+  30% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+$rules__item--elements-count: 4;
+$rules__item--animation-duration: 0.6s;
+
+@for $i from 1 through $rules__item--elements-count {
+  .rules__item:nth-child(#{$i}) {
+    &::before {
+      opacity: 0;
+      animation: rules__item--before-pulse $rules__item--animation-duration ease-out #{(0.1s * $i) + $rules__lead--animation-duration} forwards;
+    }
+
+    p {
+      opacity: 0;
+      animation: rules__item--text-fade-in $rules__item--animation-duration ease-out #{(0.1s * $i) + $rules__lead--animation-duration} forwards;
+    }
   }
 }
 
@@ -186,10 +250,32 @@
   }
 }
 
+$rules__link--before--animation-duration: 0.4s;
+
+@keyframes rules__link--before-fade-in {
+  0% {
+    opacity: 0;
+    width: 3.5rem;
+    margin-left: calc(100% - 3.5rem);
+  }
+
+  1% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
 .rules__link {
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+  color: transparent;
+  transition: color 0.2s ease-out $rules__link--before--animation-duration;
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
@@ -209,5 +295,21 @@
   @media (max-width: $mobile) and (orientation: landscape) {
     bottom: 2rem;
     right: 1.5rem;
+  }
+
+  &::before {
+    top: 0;
+    left: 0;
+    transform: none;
+    border: none;
+    opacity: 0;
+  }
+
+  &.rules__link--active {
+    color: $c-dark;
+
+    &::before {
+      animation: rules__link--before-fade-in $rules__link--before--animation-duration ease-out forwards;
+    }
   }
 }
