--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -23,6 +23,12 @@
   }
 }
 
+.intro__letter {
+  display: inline-block;
+  vertical-align: top;
+  will-change: transform;
+}
+
 .intro__title {
   margin: 0;
   max-width: 99rem;
@@ -49,6 +55,24 @@
 
   @media (max-width: $mobile) and (orientation: landscape) {
     font-size: 5rem;
+  }
+
+  .intro__word {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 20px 0;
+    margin: -20px 0;
+  }
+
+  .intro__letter {
+    transform: translate3d(0, calc(12rem + 20px), 0);
+  }
+}
+
+.intro__title--active {
+  .intro__letter {
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -157,6 +181,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  opacity: 0;
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 16px;
@@ -172,9 +197,30 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  padding: 5px 0;
+  margin-top: 5px;
+  margin-bottom: -5px;
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 0 -5px;
     font-size: 48px;
+  }
+
+  .intro__letter {
+    transform: translate3d(0, calc(4.8rem + 5px), 0);
+  }
+}
+
+.intro__label--active {
+  opacity: 1;
+  transition: opacity 0.4s ease-out 0.2s;
+}
+
+.intro__date--active {
+  .intro__letter {
+    transform: translate3d(0, 0, 0);
   }
 }
