--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -121,18 +121,20 @@
   }
 
   100% {
+    opacity: 1;
     transform: translateY(0);
   }
 }
 
 .intro__message {
+  opacity: 0;
   flex: none;
   width: 50.9rem;
   max-width: 50%;
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
-  animation: intro__message--text-fade-in 0.45s ease-out;
+  animation: intro__message--text-fade-in 0.45s ease-out 0.8s forwards;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
