--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -170,12 +170,66 @@
   }
 }
 
+@keyframes slider__control--left-slide-in {
+  0% {
+    transform: translateX(-100px) rotate(-180deg);
+    opacity: 0;
+    color: transparent;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    transform: translateX(0) rotate(0);
+    opacity: 0.5;
+    color: $c-dark;
+  }
+}
+
+@keyframes slider__control--right-slide-in {
+  0% {
+    transform: translateX(100px) rotate(180deg);
+    opacity: 0;
+    color: transparent;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(0) rotate(0);
+    opacity: 1;
+    color: $c-dark;
+  }
+}
+
+$slider__control--timing-function: cubic-bezier(0.08, 0.45, 0.4, 1.35);
+
+.slider__control--prev {
+  .screen.active & {
+    animation-name: slider__control--left-slide-in;
+  }
+}
+
+.slider__control--next {
+  .screen.active & {
+    animation-name: slider__control--right-slide-in;
+  }
+}
+
 .slider__control {
   @include btn-reset;
   position: relative;
   width: 4rem;
   height: 4rem;
   color: $c-dark;
+  animation-duration: 0.45s;
+  animation-timing-function: $slider__control--timing-function;
+  animation-direction: forwards;
+  will-change: transform;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
@@ -242,6 +296,16 @@
   }
 }
 
+@keyframes slider__pagination--fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .slider__pagination.swiper-pagination {
   position: absolute;
   bottom: 2.8rem;
@@ -254,6 +318,10 @@
   font-weight: 400;
   font-size: 2.4rem;
   line-height: 4rem;
+
+  .screen.active & {
+    animation: slider__pagination--fade-in 0.5s ease-out forwards;
+  }
 
   @media (min-width: $stop-scaling) {
     bottom: 28px;
