--- a/source/scss/blocks/prizes.scss
+++ b/source/scss/blocks/prizes.scss
@@ -130,7 +130,7 @@
     .prizes__icon {
       position: relative;
       left: -5.9rem;
-      bottom: -1.4rem;
+      bottom: 0;
       width: 26.8rem;
 
       @media (min-width: $stop-scaling) {
@@ -169,10 +169,31 @@
     }
 
     .prizes__icon {
+      position: relative;
       width: 18.8rem;
+
+      img {
+        @media (min-width: $mobile) and (orientation: landscape) {
+          position: absolute;
+          bottom: -3px;
+          right: 0;
+          width: 14rem;
+          max-width: 20rem;
+        }
+
+        @media (min-width: $tablet) and (orientation: landscape) {
+          width: 30rem;
+          max-width: 30rem;
+        }
+      }
 
       @media (min-width: $stop-scaling) {
         width: 188px;
+
+        img {
+          bottom: -13px;
+          width: 22rem;
+        }
       }
 
       @media (max-width: $tablet) and (orientation: portrait) {
