--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,6 +6,7 @@
 @import "general/scaffolding.scss";
 
 @import "blocks/animation-screen.scss";
+@import "blocks/background.scss";
 @import "blocks/btn.scss";
 @import "blocks/chat.scss";
 @import "blocks/disclaimer.scss";
