--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   z-index: 1;
   overflow: hidden;
-  // pointer-events: none;
+  pointer-events: none;
 
   &--hidden {
     display: none;
