--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -1,5 +1,5 @@
-$c-light: #ffffff;
-$c-dark: #5f458c;
+$c-white: #ffffff;
+$c-purple-dark: #5f458c;
 $c-purple: #a67ee5;
 
 $font: "Proxima Nova", "Arial", sans-serif;
