--- a/source/scss/blocks/btn.scss
+++ b/source/scss/blocks/btn.scss
@@ -8,7 +8,7 @@
   font-weight: 400;
   font-size: 2.4rem;
   line-height: 3rem;
-  color: $c-dark;
+  color: $c-purple-dark;
   letter-spacing: -0.04em;
 
   @media (min-width: $stop-scaling) {
@@ -33,8 +33,8 @@
     content: "";
     width: 100%;
     height: 100%;
-    background-color: $c-light;
-    border: 2px solid $c-light;
+    background-color: $c-white;
+    border: 2px solid $c-white;
     border-radius: 3.5rem;
     z-index: -1;
   }
@@ -56,7 +56,7 @@
 
   &:active,
   &:active:focus {
-    color: $c-light;
+    color: $c-white;
 
     &::before {
       width: 100%;
