--- a/source/scss/blocks/chat.scss
+++ b/source/scss/blocks/chat.scss
@@ -111,8 +111,8 @@
 
     p {
       width: 100%;
-      color: $c-dark;
-      background-color: $c-light;
+      color: $c-purple-dark;
+      background-color: $c-white;
       word-break: break-word;
     }
   }
@@ -122,7 +122,7 @@
     text-align: center;
 
     p {
-      color: $c-light;
+      color: $c-white;
       background-color: $c-purple;
       word-break: break-word;
     }
@@ -158,7 +158,7 @@
     margin: 0 0.65rem;
     width: 1rem;
     height: 1rem;
-    background-color: $c-light;
+    background-color: $c-white;
     border-radius: 50%;
 
     @media (min-width: $stop-scaling) {
