--- a/source/scss/blocks/disclaimer.scss
+++ b/source/scss/blocks/disclaimer.scss
@@ -1,16 +1,16 @@
 .disclaimer {
-  color: $c-dark;
-  background-color: $c-light;
+  color: $c-purple-dark;
+  background-color: $c-white;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     font-weight: 400;
-    color: $c-light;
+    color: $c-white;
     background-color: transparent;
   }
 
   @media (max-width: $mobile) and (orientation: landscape) {
     font-weight: 400;
-    color: $c-light;
+    color: $c-white;
     background-color: transparent;
   }
 
