--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -34,7 +34,7 @@
   display: block;
   padding: 1rem 0;
   width: 10rem;
-  color: $c-light;
+  color: $c-white;
   transform: translateX(-50px);
   will-change: transform;
   opacity: 0;
@@ -58,7 +58,7 @@
     z-index: 1;
 
     .page-header--menu-opened & {
-      color: $c-dark;
+      color: $c-purple-dark;
     }
   }
 
@@ -69,7 +69,7 @@
     z-index: 1;
 
     .page-header--menu-opened & {
-      color: $c-dark;
+      color: $c-purple-dark;
     }
   }
 
@@ -87,7 +87,7 @@
   width: 2.5rem;
   height: 2.5rem;
   font-size: 0;
-  background-color: $c-light;
+  background-color: $c-white;
   border-radius: 50%;
   z-index: 1;
 
@@ -105,13 +105,13 @@
     position: absolute;
     right: 0.8rem;
     height: 1px;
-    background-color: $c-dark;
+    background-color: $c-purple-dark;
   }
 
   &::before {
     top: 0.9rem;
     width: 1rem;
-    box-shadow: 0 0.6rem 0 0 $c-dark;
+    box-shadow: 0 0.6rem 0 0 $c-purple-dark;
   }
 
   &::after {
@@ -165,8 +165,8 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 4rem 3.5rem;
-    color: $c-dark;
-    background-color: $c-light;
+    color: $c-purple-dark;
+    background-color: $c-white;
 
     .page-header--menu-opened & {
       transform: translateX(0);
@@ -184,8 +184,8 @@
     align-items: flex-start;
     padding: 2rem 3.5rem;
     max-height: calc(var(--vh, 1vh) * 100);
-    color: $c-dark;
-    background-color: $c-light;
+    color: $c-purple-dark;
+    background-color: $c-white;
     overflow-y: auto;
 
     .page-header--menu-opened & {
@@ -200,7 +200,7 @@
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.0418;
-  color: $c-light;
+  color: $c-white;
 
   @media (min-width: $stop-scaling) {
     font-size: 12px;
@@ -209,13 +209,13 @@
   @media (max-width: $tablet) and (orientation: portrait) {
     margin: auto 0;
     font-size: 2.4rem;
-    color: $c-dark;
+    color: $c-purple-dark;
   }
 
   @media (max-width: $mobile) and (orientation: landscape) {
     margin: auto 0;
     font-size: 1.4rem;
-    color: $c-dark;
+    color: $c-purple-dark;
   }
 
   ul {
@@ -274,7 +274,7 @@
       bottom: 0;
       width: 100%;
       height: 2px;
-      background-color: $c-light;
+      background-color: $c-white;
       left: 0;
       transform: scaleX(0);
       transform-origin: right top;
@@ -289,13 +289,13 @@
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
         right: 0;
-        background-color: $c-dark;
+        background-color: $c-purple-dark;
       }
 
       @media (max-width: $mobile) and (orientation: landscape) {
         left: 0;
         right: 0;
-        background-color: $c-dark;
+        background-color: $c-purple-dark;
       }
     }
 
