--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -64,7 +64,7 @@
 
 .result__title {
   margin: 0 auto 2rem;
-  color: $c-light;
+  color: $c-white;
 
   @media (min-width: $stop-scaling) {
     margin: 0 auto 20px;
@@ -122,7 +122,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
-  color: $c-light;
+  color: $c-white;
 
   @media (min-width: $stop-scaling) {
     margin: auto auto 10px;
@@ -154,7 +154,7 @@
     margin-left: 1.5rem;
     width: 4rem;
     height: 4rem;
-    color: $c-dark;
+    color: $c-purple-dark;
 
     @media (min-width: $stop-scaling) {
       margin-left: 15px;
@@ -167,8 +167,8 @@
       content: "";
       width: 100%;
       height: 100%;
-      background-color: $c-light;
-      border: 2px solid $c-light;
+      background-color: $c-white;
+      border: 2px solid $c-white;
       border-radius: 50%;
       z-index: -1;
     }
@@ -205,7 +205,7 @@
   &:active,
   &:active:focus {
     span {
-      color: $c-light;
+      color: $c-white;
     }
 
     span::before {
