--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -184,7 +184,7 @@
   100% {
     transform: translateX(0) rotate(0);
     opacity: 0.5;
-    color: $c-dark;
+    color: $c-purple-dark;
   }
 }
 
@@ -202,7 +202,7 @@
   100% {
     transform: translateX(0) rotate(0);
     opacity: 1;
-    color: $c-dark;
+    color: $c-purple-dark;
   }
 }
 
@@ -225,7 +225,7 @@ $slider__control--timing-function: cubic-bezier(0.08, 0.45, 0.4, 1.35);
   position: relative;
   width: 4rem;
   height: 4rem;
-  color: $c-dark;
+  color: $c-purple-dark;
   animation-duration: 0.45s;
   animation-timing-function: $slider__control--timing-function;
   animation-direction: forwards;
@@ -241,8 +241,8 @@ $slider__control--timing-function: cubic-bezier(0.08, 0.45, 0.4, 1.35);
     content: "";
     width: 100%;
     height: 100%;
-    background-color: $c-light;
-    border: 2px solid $c-light;
+    background-color: $c-white;
+    border: 2px solid $c-white;
     border-radius: 50%;
     z-index: -1;
   }
@@ -280,7 +280,7 @@ $slider__control--timing-function: cubic-bezier(0.08, 0.45, 0.4, 1.35);
 
   &:active,
   &:active:focus {
-    color: $c-light;
+    color: $c-white;
 
     &::before {
       width: 100%;
@@ -344,7 +344,7 @@ $slider__control--timing-function: cubic-bezier(0.08, 0.45, 0.4, 1.35);
       margin: 0 0.6rem;
       width: 0.4rem;
       height: 0.4rem;
-      background-color: $c-light;
+      background-color: $c-white;
     }
   }
 
@@ -361,7 +361,7 @@ $slider__control--timing-function: cubic-bezier(0.08, 0.45, 0.4, 1.35);
       margin: 0 0.6rem;
       width: 0.4rem;
       height: 0.4rem;
-      background-color: $c-light;
+      background-color: $c-white;
     }
   }
 }
