--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -16,6 +16,19 @@ $social-block--elements-count: 3;
 
 .social-block {
   position: relative;
+
+  --toggle-default: #{$c-purple};
+  --toggle-hover: #{$c-purple-dark};
+
+  &_background_blue {
+    --toggle-default: #{$c-blue-dark};
+    --toggle-hover: #{$c-blue};
+  }
+
+  &_background_gray {
+    --toggle-default: #{$c-blue};
+    --toggle-hover: #{$c-blue-dark};
+  }
 }
 
 .social-block--active {
@@ -52,7 +65,7 @@ $social-block--elements-count: 3;
   display: block;
   width: 4rem;
   height: 4rem;
-  color: $c-purple-dark;
+  color: var(--toggle-default);
   border-radius: 50%;
   transition: color 0.3s ease-out 0.1s;
 
@@ -80,6 +93,7 @@ $social-block--elements-count: 3;
     border-radius: 50%;
     background-color: $c-white;
     z-index: -1;
+    border: 2px solid transparent;
 
     .document__body_ready & {
       animation: social-block__toggler--before-pulse 0.4s cubic-bezier(0.48, 0.83, 0.16, 0.92) 0.4s;
@@ -94,7 +108,7 @@ $social-block--elements-count: 3;
   }
 
   &:hover {
-    color: $c-purple;
+    color: var(--toggle-hover);
 
     &::before {
       transform: scale(1.125);
@@ -102,11 +116,11 @@ $social-block--elements-count: 3;
   }
 
   &:focus {
-    color: $c-purple;
+    color: var(--toggle-hover);
     outline: none;
 
     &::before {
-      border-color: $c-purple;
+      border-color: currentColor;
     }
 
     ~ .social-block__list {
@@ -120,8 +134,8 @@ $social-block--elements-count: 3;
 
     &::before {
       transform: scale(1);
-      background-color: $c-purple;
-      border-color: $c-purple;
+      background-color: var(--toggle-hover);
+      border-color: var(--toggle-hover);
     }
   }
 }
