--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -1,6 +1,8 @@
 $c-white: #ffffff;
 $c-purple-dark: #5f458c;
 $c-purple: #a67ee5;
+$c-blue: #9fceff;
+$c-blue-dark: #3e72ee;
 
 $font: "Proxima Nova", "Arial", sans-serif;
 $font-alt: "Radical",  "Arial", sans-serif;
