--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -298,10 +298,10 @@ $rules__link--before--animation-duration: 0.4s;
   }
 
   &::before {
-    top: 0;
-    left: 0;
-    transform: none;
-    border: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-color: transparent;
     opacity: 0;
   }
 
@@ -310,6 +310,27 @@ $rules__link--before--animation-duration: 0.4s;
 
     &::before {
       animation: rules__link--before-fade-in $rules__link--before--animation-duration ease-out forwards;
+    }
+
+    &:hover {
+      color: $c-purple;
+    }
+
+    &:focus {
+      color: $c-purple;
+
+      &::before {
+        border-color: currentColor;
+      }
+    }
+
+    &:active {
+      color: $c-white;
+
+      &::before {
+        background-color: $c-purple;
+        border-color: $c-purple;
+      }
     }
   }
 }
