--- a/source/scss/blocks/chat.scss
+++ b/source/scss/blocks/chat.scss
@@ -183,6 +183,29 @@
   }
 }
 
+.chat__placeholder-dot {
+  opacity: 0;
+  animation: chat__placeholder-dot-fade 0.6s ease infinite both;
+
+  &:nth-child(2) {
+    animation-delay: 0.1s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+}
+
 .chat__footer {
   margin-top: auto;
+}
+
+@keyframes chat__placeholder-dot-fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
