--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -149,12 +149,13 @@
     font-size: 1.6rem;
   }
 
-  span {
+  .result__button-icon {
     position: relative;
     margin-left: 1.5rem;
     width: 4rem;
     height: 4rem;
     color: $c-purple-dark;
+    animation: result__button-translate 0.4s ease-out forwards;
 
     @media (min-width: $stop-scaling) {
       margin-left: 15px;
@@ -174,11 +175,12 @@
     }
   }
 
-  svg {
+  .result__button-icon-svg {
     @include center;
     margin-left: 0.3rem;
     width: 2.4rem;
     height: 1.9rem;
+    animation: result__button-rotate 0.4s ease-out forwards;
 
     @media (min-width: $stop-scaling) {
       margin-left: 3px;
@@ -188,27 +190,31 @@
   }
 
   &:hover {
-    span::before {
-      width: 112.5%;
-      height: 112.5%;
+    .result__button-icon::before {
+      transform: translate(-50%, -50%) scale(1.125);
+      transition: transform 0.3s;
+    }
+
+    .result__button-icon-svg {
+      animation: result__button-rotate-full 0.4s ease-out forwards;
     }
   }
 
   &:focus {
     outline: none;
 
-    span::before {
+    .result__button-icon::before {
       border-color: $c-purple;
     }
   }
 
   &:active,
   &:active:focus {
-    span {
+    .result__button-icon {
       color: $c-white;
     }
 
-    span::before {
+    .result__button-icon::before {
       width: 100%;
       height: 100%;
       background-color: $c-purple;
@@ -274,5 +280,39 @@
     @media (max-width: $mobile) and (orientation: landscape) {
       width: 45rem;
     }
+  }
+}
+
+@keyframes result__button-translate {
+  0% {
+    transform: translateX(100px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes result__button-rotate {
+  0% {
+    transform: translate(-50%, -50%) rotate(120deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+}
+
+@keyframes result__button-rotate-full {
+  0% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+
+  50% {
+    transform: translate(-50%, -50%) rotate(180deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
