--- a/source/scss/blocks/chat.scss
+++ b/source/scss/blocks/chat.scss
@@ -186,7 +186,7 @@
 
 .chat__placeholder-dot {
   opacity: 0;
-  animation: chat__placeholder-dot-fade 0.6s ease infinite both;
+  animation: fade-in 0.6s ease infinite both;
 
   &:nth-child(2) {
     animation-delay: 0.1s;
@@ -199,16 +199,6 @@
 
 .chat__footer {
   margin-top: auto;
-}
-
-@keyframes chat__placeholder-dot-fade {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 @keyframes chat__incoming-fade {
