--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -165,13 +165,13 @@
     @media (orientation: portrait) {
       display: block;
       opacity: 0;
-      animation: form__button-svg-fade 0.3s ease-out forwards;
+      animation: fade-in 0.3s ease-out forwards;
     }
 
     @media (max-width: $tablet) and (orientation: landscape) {
       display: block;
       opacity: 0;
-      animation: form__button-svg-fade 0.3s ease-out forwards;
+      animation: fade-in 0.3s ease-out forwards;
     }
   }
 }
@@ -195,16 +195,6 @@
     @media (max-width: $mobile) and (orientation: landscape) {
       width: calc(100% - 5rem);
     }
-  }
-}
-
-@keyframes form__button-svg-fade {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
   }
 }
 
