--- a/source/scss/blocks/disclaimer.scss
+++ b/source/scss/blocks/disclaimer.scss
@@ -22,6 +22,8 @@
     text-transform: uppercase;
     font-size: 1.2rem;
     line-height: 1.2;
+    opacity: 0;
+    animation: fade-in 0.3s ease-out forwards;
 
     @media (min-width: $stop-scaling) {
       font-size: 12px;
