Анимация ухода и прибытия на экраны призов, правил и игры

--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -300,17 +300,34 @@
 }
 
 .screen--story {
-  &.screen--transitioning {
+  transform: scale(1);
+
+  &.screen--transitioning-out {
     display: block;
     position: fixed;
     width: 100%;
     height: 100%;
+    transform: scale(0.8);
+    transition: transform 0.5s ease-out;
   }
 }
 
-$screen--prizes--animation-duration: 0.4s;
+.background {
+  opacity: 0;
+}
 
-@keyframes screen--prizes--bg-slide-up {
+.screen--story,
+.screen--intro,
+.screen--prizes {
+  &.active ~ .background {
+    opacity: 1;
+  }
+}
+
+$screen--bg-animation-duration: 0.4s;
+$screen--bg-animation-delay: 0.2s;
+
+@keyframes screen--bg-slide-up {
   0% {
     transform: translateY(100%);
   }
@@ -320,8 +337,21 @@ $screen--prizes--animation-duration: 0.4s;
   }
 }
 
-.screen--prizes {
+@keyframes screen-footer--slide-up {
+  0% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.screen--prizes,
+.screen--rules,
+.screen--game {
   position: relative;
+  z-index: -1;
 
   &::after {
     content: "";
@@ -332,51 +362,62 @@ $screen--prizes--animation-duration: 0.4s;
     bottom: 0;
     width: 100%;
     height: 100%;
-    transform: translateY(100%);
     will-change: transform;
     background-color: $c-purple-dark;
   }
 
-  &.screen--transitioning {
+  .screen__wrapper {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  &.screen--transitioning-out {
     display: block;
-    z-index: -1;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 
     .screen__wrapper {
+      transform: scale(0.9);
       opacity: 0;
+      transition: transform $screen--bg-animation-delay ease-out, opacity $screen--bg-animation-delay ease-out;
     }
+  }
 
-    .screen__footer {
-      transform: translateY(100%);
-    }
+  .screen__footer {
+    transform: translateY(100%);
   }
 
   &.active {
     z-index: 1;
 
     &::after {
-      animation: screen--prizes--bg-slide-up $screen--prizes--animation-duration ease-in-out forwards;
-    }
-
-    .screen__wrapper {
-      opacity: 1;
-      transition: opacity 0.4s ease-in $screen--prizes--animation-duration; // TODO убрать когда будет задание на анимацию этого экрана
+      opacity: 0;
+      animation: fade-in $screen--bg-animation-duration $screen--bg-animation-delay ease-in forwards;
     }
 
     .screen__footer {
-      transform: translateY(0);
-      transition: transform $screen--prizes--animation-duration cubic-bezier(0.48, 0.83, 0.16, 0.92);
+      animation: screen-footer--slide-up $screen--bg-animation-duration $screen--bg-animation-delay cubic-bezier(0.48, 0.83, 0.16, 0.92) forwards;
+    }
+  }
+
+  &.screen--transitioning-in {
+    &::after {
+      opacity: 1;
+      transform: translateY(100%);
+      animation: screen--bg-slide-up $screen--bg-animation-duration $screen--bg-animation-delay ease-in-out forwards;
     }
   }
 }
 
 .screen--game {
   position: relative;
-  background-color: $c-purple-dark;
 
   .screen__picture {
     position: absolute;
     right: -8.5rem;
     bottom: 0;
+    z-index: 1;
     transform: translate(200px, 200px);
 
     @media (min-width: $stop-scaling) {
@@ -416,6 +457,3 @@ $screen--prizes--animation-duration: 0.4s;
   }
 }
 
-.screen--rules {
-  background-color: $c-purple-dark;
-}
