--- a/source/scss/blocks/chat.scss
+++ b/source/scss/blocks/chat.scss
@@ -185,8 +185,8 @@
 }
 
 .chat__placeholder-dot {
-  opacity: 0;
-  animation: fade-in 0.6s ease infinite both;
+  opacity: 0.2;
+  animation: chat__dot-fade-in 0.6s ease infinite both;
 
   &:nth-child(2) {
     animation-delay: 0.1s;
@@ -208,5 +208,16 @@
 
   100% {
     color: $c-white;
+  }
+}
+
+
+@keyframes chat__dot-fade-in {
+  0% {
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
