--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,6 +5,7 @@
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
 @import "general/keyframes.scss";
+@import "general/a11y.scss";
 
 @import "blocks/animation-screen.scss";
 @import "blocks/background.scss";
